<resources>
    <string name="app_name">DungeonCrafter</string>
    <string name="email">EMAIL</string>
    <string name="password">CONTRASEÑA</string>
    <string name="iniciosesion">INICIAR SESSION</string>
    <string name="registro">Aun no tienes cuenta? Registrate aqui</string>
    <string name="google">INICIAR SESION CON GOOGLE</string>
    <string name="cerrar">CERRAR SESION</string>
    <string name="idioma">IDIOMA</string>
    <string name="configuracion">CONFIGURACION</string>
    <string name="your_web_client_id" translatable="false">221295858051-1jh5cpgh30vidcrjv6b1d7mu8aedi5uq.apps.googleusercontent.com</string>
    <string name="opciones">Opciones</string>
    <string name="jugar">JUGAR</string>
    <string name="coleccion">COLECCION</string>
    <string name="sobres">ABRIR SOBRES</string>
    <string name="menuOpciones">Menu Opciones</string>
    <string-array name="idiomas">
        <item>ESPAÑOL</item>
        <item>INGLES</item>
    </string-array>
    <string name="creado">Se ha creado el usuario</string>
    <string name="errorCreacion">El usuario ya existe</string>
    <string name="errorGenerico">Se ha producido un error</string>
    <string name="inicio">Se ha iniciado sesion correctamente</string>
    <string name="errorInicio">No se ha encontrado el usuario</string>
    <string name="datosVacios">No se han rellenado todos los campos</string>
    <string name="menuRegistro">Menu de Registro</string>
    <string name="usuario">USUARIO</string>
    <string name="confirmar">CONFIRMAR CONTRASEÑA</string>
    <string name="errorContrasenas">Las contraseñas no coinciden</string>
    <string name="guardar">Guardar cambios</string>
    <string-array name="descripcion">
        <item>Desc Arthas</item>
        <item>Desc Norgle</item>
        <item>Desc Korne</item>
        <item>Desc alamuerte</item>
        <item>Desc Gorko</item>
        <item>Desc Sargeras</item>
        <item>Desc Slaanesh</item>
        <item>Desc Morko</item>
    </string-array>
    <string name="registro2">Registrase</string>
    <string name="genero">GENERO</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="otro">Otro</string>
    <string name="condiciones">Acepto los terminos y condiciones</string>
    <string name="errorCondiciones">No se han aceptados los terminos y condiciones</string>
    <string name="modificarUser">MODIFICAR USUARIO</string>
    <string name="modificar">Modificar</string>
    <string name="borrar">Borrar</string>
    <string name="cambiarContrasena">Quieres cambiar la contraseña?</string>
    <string name="cancelar">Cancelar</string>
    <string name="noCambios">No has modificado ningun parametro</string>
    <string name="tituloEliminar">"Vas a eliminar tu usuario "</string>
    <string name="mensajeEliminar">Esto conlleva a la perdida de todos tus datos de usuario Estas seguro?</string>
    <string name="web">Enlace Github</string>
    <string name="acercaDe">Acerca de</string>
    <string name="Correo">Contactanos</string>
    <string name="acercaDeTitulo">ACERCA DE:</string>
    <string name="acercaDeContenido">Esto es un pequeño proyecto creado en kotlin con android studio</string>
    <string name="Contacto">Contactar con admin de dungeonCrafter</string>
    <string name="siguiente">Siguiente</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="acierto">Has acertado, Ganaras</string>
    <string name="moneda">Monedas</string>
    <string name="fallo">Te has equivocado</string>
    <string name="Iniciar">Iniciar</string>
    <string name="nivel">Nivel</string>
    <string name="SimonDice">Simon Dice</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="Mensaje">Gracias por crear tu cuenta</string>
</resources>