<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/option_1"
        android:icon="@drawable/user_slash_solid__1_"
        android:iconTint="@color/md_theme_dark_onBackground"
        android:title="@string/cerrar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/option_2"
        android:icon="@drawable/gear_solid"
        android:iconTint="@color/md_theme_dark_onBackground"
        android:title="@string/opciones"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/opcion_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/web" />
    <item
        android:id="@+id/opcion_acercade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/acercaDe" />
    <item
        android:id="@+id/opcion_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Correo" />
</menu>